--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,4 +37,4 @@ jobs:
           
           # Runs a secret
       - name: run a one-line script 
-        run: echo $Second_secret 
+        run: echo $FIRST_SECRET 
